--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,7 @@ Architecture: all
 Pre-Depends:
  debconf
 Depends:
- virtualbox (>= ${virtualbox:Version}) | virtualbox-6.1,
- virtualbox (<< ${virtualbox:nextVersion}) | virtualbox-6.1,
+ virtualbox (>= 6.1.32-1kaisen) | virtualbox-6.1,
  wget,
  ${misc:Depends}
 Description: extra capabilities for VirtualBox, downloader.
