Update dependancies and rules.

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,8 @@ Architecture: all
 Pre-Depends:
  debconf
 Depends:
- virtualbox (>= ${source:Upstream-Version}) | virtualbox-7.0,
+ virtualbox (>= ${virtualbox:Version}),
+ virtualbox (<< ${virtualbox:nextVersion}),
  wget,
  ca-certificates,
  ${misc:Depends}
