--- a/debian/rules
+++ b/debian/rules
@@ -16,4 +16,4 @@ override_dh_installdeb:
 
 override_dh_gencontrol:
 	dh_gencontrol -- \
-		-Vvirtualbox:Version=$(DEB_VERSION_UPSTREAM)-1kaisen -Vvirtualbox:nextVersion=$(DEB_VERSION_UPSTREAM)-1kaisen
+		-Vvirtualbox:Version=$(DEB_VERSION_UPSTREAM)-1kaisen -Vvirtualbox:nextVersion=$(DEB_VERSION_UPSTREAM)-zkaisen
